// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`include validation allow deep include without another include 1`] = `
query {
  findManyUser {
    id
    email
    name
    json
    countFloat
    countInt1
    countInt2
    countInt3
    countInt4
    countInt5
    countInt6
    lastLoginAt
    coinflips
    posts(take: 20) {
      id
      createdAt
      updatedAt
      published
      title
      content
      authorId
      optional
    }
  }
}
`;

exports[`include validation allow include statement with only false properties 1`] = `
query {
  findManyPost {
    id
    createdAt
    updatedAt
    published
    title
    content
    authorId
    optional
    author {
      id
      email
      name
      json
      countFloat
      countInt1
      countInt2
      countInt3
      countInt4
      countInt5
      countInt6
      lastLoginAt
      coinflips
    }
  }
}
`;

exports[`include validation allow normal findMany without include for empty model 1`] = `
query {
  findManyNoRelations {
    id
    name
  }
}
`;

exports[`include validation catch unknown field name 1`] = `
query {
  mauthor {
    mauthor # INVALID_FIELD
  }
}
`;

exports[`include validation deep include query 1`] = `
query {
  findManyPost {
    id
    createdAt
    updatedAt
    published
    title
    content
    authorId
    optional
    author {
      id
      email
      name
      json
      countFloat
      countInt1
      countInt2
      countInt3
      countInt4
      countInt5
      countInt6
      lastLoginAt
      coinflips
      posts {
        id
        createdAt
        updatedAt
        published
        title
        content
        authorId
        optional
      }
    }
  }
}
`;

exports[`include validation dont allow empty include statements 1`] = `
query {
  findManyPost {
    include # INVALID_FIELD
  }
}
`;

exports[`include validation enforce empty include, if no relation 1`] = `
query {
  asd {
    asd # INVALID_FIELD
  }
}
`;

exports[`include validation enforce no include, if no relation 1`] = `
query {
  findManyNoRelations {
    include # INVALID_FIELD
  }
}
`;

exports[`include validation handle scalar fields special 1`] = `
query {
  id {
    id # INVALID_FIELD
  }
}
`;
